<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SelectCricketer"
    tools:showIn="@layout/activity_select_cricketer">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/best_cricketer_question"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_st"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sachin" />

            <RadioButton
                android:id="@+id/radio_button_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virat" />

            <RadioButton
                android:id="@+id/radio_button_ag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gilchrist" />

            <RadioButton
                android:id="@+id/radio_button_jq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kallis" />
        </RadioGroup>

        <Button
            android:id="@+id/button_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>
