<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.Summary"
    tools:showIn="@layout/activity_summary">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_hello_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="10dp"
            android:text="@string/hello_user"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/here_are_the_answers_selected"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/best_cricketer_question"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_ans_cricketer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ans_cricketer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/flag_color_question"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_ans_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ans_color"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_history"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/history"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_finish"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
